# nixdoc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.nix  Cargo.toml  README.md  default.nix  flake.nix  test.nix
.github/: dependabot.yml  release.yml
.github/workflows/: build.yml  update-flake.yml
doc/: frontmatter.md  migration.md
src/: comment.rs  commonmark.rs  docbook.rs  format.rs  frontmatter.rs  legacy.rs  main.rs  markdown.rs  test.rs
src/snapshots/: nixdoc__arg_formatting.snap  nixdoc__description_of_lib_debug.snap  nixdoc__inherited_exports.snap  nixdoc__line_comments.snap  nixdoc__main.snap  nixdoc__test__commonmark.snap  nixdoc__test__doc_comment.snap  nixdoc__test__doc_comment_no_duplicate_arguments.snap  nixdoc__test__doc_comment_section_description.snap  nixdoc__test__frontmatter_doc_location_e2e.snap  nixdoc__test__headings.snap  nixdoc__test__json_output.snap  nixdoc__test__let_ident.snap  nixdoc__test__let_ident_chained.snap  nixdoc__test__main.snap  nixdoc__test__main_minimal.snap  nixdoc__test__multi_line.snap  nixdoc__test__patterns.snap
test/: arg-formatting.nix  commonmark.md  doc-comment-arguments.nix  doc-comment-sec-heading.nix  doc-comment.nix  docs.md  frontmatter-doc-location.nix  headings.md  inherited-exports.nix  let-ident-chained.nix  let-ident.nix  lib-debug.nix  line-comments.nix  multi-line.nix  patterns.nix  strings.json
