[package]
name = "nixdoc"
version = "3.0.4"
authors = ["Vincent Ambo <mail@tazj.in>", "asymmetric"]
edition = "2021"
description = "Generate CommonMark from Nix library functions"

[dependencies]
rnix = "0.11"
rowan = "0.15.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16"
clap = { version = "4.4.4", features = ["derive"] }
comrak = "0.22.0"

[dev-dependencies]
insta = "1.38.0"
